[BE-136] fix: 의사-환자 목록 조회 API 개발 api 명세서 수정에 따른 테스트 코드 수정