@@ -2,165 +2,353 @@ package com.ssafy.aitime.domain.hospital.service;
 
 import com.ssafy.aitime.common.enums.RecordStatus;
 import com.ssafy.aitime.domain.child.entity.Child;
-import com.ssafy.aitime.domain.child.entity.enums.Gender;
+import com.ssafy.aitime.domain.child.entity.enums.Gender; // ✅ 만약 패키지/이름 다르면 너 프로젝트 enum에 맞게 수정
 import com.ssafy.aitime.domain.child.repository.ChildRepository;
-import com.ssafy.aitime.domain.exam.entity.Exam;
-import com.ssafy.aitime.domain.exam.entity.enums.ExamStatus; // ✅ 너 프로젝트 패키지에 맞게 수정
 import com.ssafy.aitime.domain.exam.repository.ExamRepository;
-import com.ssafy.aitime.domain.hospital.dto.response.ChildResponse;
-import com.ssafy.aitime.domain.hospital.dto.response.TotalPatientListResponse;
+import com.ssafy.aitime.domain.hospital.dto.request.PatientSearchRequest;
+import com.ssafy.aitime.domain.hospital.dto.response.PatientSearchResponse;
 import com.ssafy.aitime.domain.hospital.entity.HospitalChildren;
 import com.ssafy.aitime.domain.hospital.entity.Reservation;
 import com.ssafy.aitime.domain.hospital.entity.enums.LinkStatus;
 import com.ssafy.aitime.domain.hospital.entity.enums.ReservationStatus;
+import com.ssafy.aitime.domain.hospital.entity.enums.StaffRole;
+import com.ssafy.aitime.domain.hospital.exception.DoctorNotFoundException;
 import com.ssafy.aitime.domain.hospital.repository.HospitalChildrenRepository;
+import com.ssafy.aitime.domain.hospital.repository.HospitalStaffRepository;
 import com.ssafy.aitime.domain.hospital.repository.ReservationRepository;
 import com.ssafy.aitime.domain.user.entity.User;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.lang.reflect.Method;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class DoctorServiceImplTest {
 
-    @Mock ReservationRepository reservationRepository;
-    @Mock HospitalChildrenRepository hospitalChildrenRepository;
-    @Mock ChildRepository childRepository;
-    @Mock ExamRepository examRepository;
+    @Mock private ReservationRepository reservationRepository;
+    @Mock private HospitalChildrenRepository hospitalChildrenRepository;
+    @Mock private HospitalStaffRepository hospitalStaffRepository;
+    @Mock private ChildRepository childRepository;
+    @Mock private ExamRepository examRepository;
 
-    @InjectMocks DoctorServiceImpl doctorService;
+    @InjectMocks
+    private DoctorServiceImpl doctorService;
 
     @Test
-    @DisplayName("예약(취소 제외) -> ACTIVE 링크 -> ACTIVE child -> child별 최신 examStatus 매핑하여 반환")
-    void getTotalPatientList_success_latestExamStatus() {
+    void getSearchPatientList_withDateFilter_returnsPatients() {
         // given
         UUID doctorId = UUID.randomUUID();
 
-        // hospitalChildrenId 2개 (예약에서 가져온다고 가정)
+        PatientSearchRequest req = mock(PatientSearchRequest.class);
+        LocalDate filterDate = LocalDate.of(2026, 1, 26);
+        LocalDateTime startOfDay = filterDate.atStartOfDay();
+        LocalDateTime endOfDay = filterDate.plusDays(1).atStartOfDay();
+
+        given(req.getEffectiveDate()).willReturn(filterDate);
+        given(req.hasNameFilter()).willReturn(false);
+        given(req.hasResultStatusFilter()).willReturn(false);
+        given(req.page()).willReturn(0);
+        given(req.size()).willReturn(10);
+
+        // doctor validation
+        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
+                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
+        )).willReturn(true);
+
+        // reservations -> hospitalChildrenIds
         UUID hcId1 = UUID.randomUUID();
         UUID hcId2 = UUID.randomUUID();
 
-        // childId 2개
+        Reservation r1 = mockReservation(hcId1);
+        Reservation r2 = mockReservation(hcId1); // 중복
+        Reservation r3 = mockReservation(hcId2);
+
+        given(reservationRepository.findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(
+                eq(doctorId), eq(ReservationStatus.CANCELLED), eq(startOfDay), eq(endOfDay)
+        )).willReturn(List.of(r1, r2, r3));
+
+        // hospital_children -> childIds
         UUID childId1 = UUID.randomUUID();
         UUID childId2 = UUID.randomUUID();
 
-        // User는 child.getUser().getUserId() 때문에 필요
-        User user = mock(User.class);
-        UUID userId = UUID.randomUUID();
-        given(user.getUserId()).willReturn(userId);
+        HospitalChildren hc1 = mockHospitalChildren(hcId1, childId1);
+        HospitalChildren hc2 = mockHospitalChildren(hcId2, childId2);
 
-        // Child 2개 (RecordStatus.ACTIVE)
-        Child child1 = mock(Child.class);
-        given(child1.getChildId()).willReturn(childId1);
-        given(child1.getUser()).willReturn(user);
-        given(child1.getName()).willReturn("아이1");
-        given(child1.getBirthdate()).willReturn(LocalDate.now().minusMonths(18));
-        given(child1.getGender()).willReturn(Gender.MALE);
+        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(
+                argThat(list -> list.containsAll(List.of(hcId1, hcId2))), eq(LinkStatus.ACTIVE)
+        )).willReturn(List.of(hc1, hc2));
 
-        Child child2 = mock(Child.class);
-        given(child2.getChildId()).willReturn(childId2);
-        given(child2.getUser()).willReturn(user);
-        given(child2.getName()).willReturn("아이2");
-        given(child2.getBirthdate()).willReturn(LocalDate.now().minusMonths(20));
-        given(child2.getGender()).willReturn(Gender.FEMALE);
+        // children
+        UUID userId1 = UUID.randomUUID();
+        UUID userId2 = UUID.randomUUID();
 
-        // Reservation -> hospitalChildrenId 추출 흐름
-        Reservation r1 = mock(Reservation.class);
-        Reservation r2 = mock(Reservation.class);
+        Child c1 = mockChild(childId1, userId1, "홍길동", LocalDate.of(2015, 5, 20), Gender.MALE);
+        Child c2 = mockChild(childId2, userId2, "김철수", LocalDate.of(2016, 6, 10), Gender.FEMALE);
 
-        HospitalChildren hc1 = mock(HospitalChildren.class);
-        given(hc1.getHospitalChildrenId()).willReturn(hcId1);
-        HospitalChildren hc2 = mock(HospitalChildren.class);
-        given(hc2.getHospitalChildrenId()).willReturn(hcId2);
+        given(childRepository.findByChildIdInAndRecordStatus(
+                argThat(list -> list.containsAll(List.of(childId1, childId2))), eq(RecordStatus.ACTIVE)
+        )).willReturn(List.of(c1, c2));
 
-        given(r1.getHospitalChildren()).willReturn(hc1);
-        given(r2.getHospitalChildren()).willReturn(hc2);
-
-        given(reservationRepository.findByDoctorIdAndReservationStatusNot(doctorId, ReservationStatus.CANCELLED))
-                .willReturn(List.of(r1, r2));
-
-        // hospitalChildrenRepository -> HospitalChildren 엔티티 리스트 (ACTIVE)
-        // 여기서 childId 추출함
-        HospitalChildren hcEntity1 = mock(HospitalChildren.class);
-        given(hcEntity1.getChild()).willReturn(child1);
-
-        HospitalChildren hcEntity2 = mock(HospitalChildren.class);
-        given(hcEntity2.getChild()).willReturn(child2);
-
-        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(List.of(hcId1, hcId2), LinkStatus.ACTIVE))
-                .willReturn(List.of(hcEntity1, hcEntity2));
-
-        // childRepository -> Child 객체들
-        given(childRepository.findByChildIdInAndRecordStatus(List.of(childId1, childId2), RecordStatus.ACTIVE))
-                .willReturn(List.of(child1, child2));
-
-        // examRepository -> childId들로 exam을 "completedAt desc"로 받는다고 가정
-        // child1은 최신이 IN_PROGRESS, child2는 exam 없음
-        Exam exam1_newest = mock(Exam.class);
-        given(exam1_newest.getChild()).willReturn(child1);
-        given(exam1_newest.getExamStatus()).willReturn(ExamStatus.IN_PROGRESS);
-
-        Exam exam1_older = mock(Exam.class);
-        given(exam1_older.getChild()).willReturn(child1);
-        given(exam1_older.getExamStatus()).willReturn(ExamStatus.COMPLETED);
-
-        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(List.of(childId1, childId2)))
-                .willReturn(List.of(exam1_newest, exam1_older));
+        // exams 비워두면 latestExamStatus = "NONE"
+        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(anyList()))
+                .willReturn(Collections.emptyList());
 
         // when
-        TotalPatientListResponse res = doctorService.getTotalPatientList(doctorId);
+        PatientSearchResponse resp = doctorService.getSearchPatientList(doctorId, req);
 
-        // then
-        assertThat(res).isNotNull();
-        assertThat(res.total()).isEqualTo(2L);
+        // then (반환값은 DTO가 record/class 어느 쪽이든 동작하게 reflection으로 검증)
+        List<?> items = extractList(resp);
+        int total = extractTotal(resp);
 
-        List<ChildResponse> list = res.childResponses();
-        assertThat(list).hasSize(2);
+        assertThat(items).hasSize(2);
+        assertThat(total).isEqualTo(2);
 
-        // child1 최신 상태는 IN_PROGRESS
-        ChildResponse cr1 = list.stream().filter(x -> x.childId().equals(childId1)).findFirst().orElseThrow();
-        assertThat(cr1.latestExamStatus()).isEqualTo("IN_PROGRESS");
-        assertThat(cr1.name()).isEqualTo("아이1");
-        assertThat(cr1.userId()).isEqualTo(userId);
-
-        // child2 exam 없음 -> "NONE"
-        ChildResponse cr2 = list.stream().filter(x -> x.childId().equals(childId2)).findFirst().orElseThrow();
-        assertThat(cr2.latestExamStatus()).isEqualTo("NONE");
+        // date 필터 경로로 호출됐는지 확인
+        verify(reservationRepository, times(1))
+                .findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(
+                        eq(doctorId), eq(ReservationStatus.CANCELLED), eq(startOfDay), eq(endOfDay)
+                );
+        verify(reservationRepository, never())
+                .findByDoctorIdAndReservationStatusNot(eq(doctorId), eq(ReservationStatus.CANCELLED));
     }
 
     @Test
-    @DisplayName("예약이 없으면 빈 리스트/0 반환")
-    void getTotalPatientList_empty_whenNoReservation() {
+    void getSearchPatientList_noDateFilter_withNameFilter_andPaging() {
         // given
         UUID doctorId = UUID.randomUUID();
 
-        given(reservationRepository.findByDoctorIdAndReservationStatusNot(doctorId, ReservationStatus.CANCELLED))
-                .willReturn(Collections.emptyList());
+        PatientSearchRequest req = mock(PatientSearchRequest.class);
+        given(req.getEffectiveDate()).willReturn(null);
 
-        // 아래는 호출될 수도/안될 수도 있는데, 안전하게 빈 반환 세팅
-        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(Collections.emptyList(), LinkStatus.ACTIVE))
-                .willReturn(Collections.emptyList());
-        given(childRepository.findByChildIdInAndRecordStatus(Collections.emptyList(), RecordStatus.ACTIVE))
-                .willReturn(Collections.emptyList());
-        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(Collections.emptyList()))
-                .willReturn(Collections.emptyList());
+        given(req.hasNameFilter()).willReturn(true);
+        given(req.name()).willReturn("길"); // "홍길동"만 남게
+        given(req.hasResultStatusFilter()).willReturn(false);
+
+        given(req.page()).willReturn(0);
+        given(req.size()).willReturn(1); // 페이징으로 1개만
+
+        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
+                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
+        )).willReturn(true);
+
+        UUID hcId1 = UUID.randomUUID();
+        UUID hcId2 = UUID.randomUUID();
+
+        Reservation r1 = mockReservation(hcId1);
+        Reservation r2 = mockReservation(hcId2);
+
+        given(reservationRepository.findByDoctorIdAndReservationStatusNot(
+                eq(doctorId), eq(ReservationStatus.CANCELLED)
+        )).willReturn(List.of(r1, r2));
+
+        UUID childId1 = UUID.randomUUID();
+        UUID childId2 = UUID.randomUUID();
+
+        HospitalChildren hc1 = mockHospitalChildren(hcId1, childId1);
+        HospitalChildren hc2 = mockHospitalChildren(hcId2, childId2);
+
+        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(anyList(), eq(LinkStatus.ACTIVE)))
+                .willReturn(List.of(hc1, hc2));
+
+        Child c1 = mockChild(childId1, UUID.randomUUID(), "홍길동", LocalDate.of(2015, 5, 20), Gender.MALE);
+        Child c2 = mockChild(childId2, UUID.randomUUID(), "김철수", LocalDate.of(2016, 6, 10), Gender.MALE);
+
+        given(childRepository.findByChildIdInAndRecordStatus(anyList(), eq(RecordStatus.ACTIVE)))
+                .willReturn(List.of(c1, c2));
+
+        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(anyList()))
+                .willReturn(Collections.emptyList()); // NONE
 
         // when
-        TotalPatientListResponse res = doctorService.getTotalPatientList(doctorId);
+        PatientSearchResponse resp = doctorService.getSearchPatientList(doctorId, req);
 
         // then
-        assertThat(res.total()).isZero();
-        assertThat(res.childResponses()).isEmpty();
+        List<?> items = extractList(resp);
+        int total = extractTotal(resp);
 
+        // 이름 필터 후 총 1명, 페이지 size=1이라 items도 1명
+        assertThat(total).isEqualTo(1);
+        assertThat(items).hasSize(1);
+
+        // no-date 경로 호출 확인
+        verify(reservationRepository, times(1))
+                .findByDoctorIdAndReservationStatusNot(eq(doctorId), eq(ReservationStatus.CANCELLED));
+        verify(reservationRepository, never())
+                .findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(any(), any(), any(), any());
+    }
+
+    @Test
+    void getSearchPatientList_doctorNotFound_throws() {
+        // given
+        UUID doctorId = UUID.randomUUID();
+        PatientSearchRequest req = mock(PatientSearchRequest.class);
+
+        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
+                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
+        )).willReturn(false);
+
+        // when & then
+        assertThatThrownBy(() -> doctorService.getSearchPatientList(doctorId, req))
+                .isInstanceOf(DoctorNotFoundException.class);
+
+        verifyNoInteractions(reservationRepository);
+        verifyNoInteractions(hospitalChildrenRepository);
+        verifyNoInteractions(childRepository);
+        verifyNoInteractions(examRepository);
+    }
+
+    // ---------------- helpers ----------------
+
+    private static Reservation mockReservation(UUID hospitalChildrenId) {
+        Reservation r = mock(Reservation.class);
+        HospitalChildren hc = mock(HospitalChildren.class);
+        given(hc.getHospitalChildrenId()).willReturn(hospitalChildrenId);
+        given(r.getHospitalChildren()).willReturn(hc);
+        return r;
+    }
+
+    private static HospitalChildren mockHospitalChildren(UUID childId) {
+        HospitalChildren hc = mock(HospitalChildren.class);
+        Child child = mock(Child.class);
+
+        given(child.getChildId()).willReturn(childId);
+        given(hc.getChild()).willReturn(child);
+
+        // ✅ 아래 stubbing은 서비스에서 안 써서 UnnecessaryStubbingException 유발 가능
+        // given(hc.getHospitalChildrenId()).willReturn(hospitalChildrenId);
+
+        return hc;
+    }
+
+
+    private static Child mockChild(UUID childId, UUID userId, String name, LocalDate birthdate, Gender gender) {
+        Child child = mock(Child.class);
+        User user = mock(User.class);
+
+        given(user.getUserId()).willReturn(userId);
+
+        given(child.getChildId()).willReturn(childId);
+        given(child.getUser()).willReturn(user);
+        given(child.getName()).willReturn(name);
+        given(child.getBirthdate()).willReturn(birthdate);
+        given(child.getGender()).willReturn(gender);
+
+        return child;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static List<?> extractList(Object resp) {
+        // 1) 흔한 이름 후보 먼저 시도
+        for (String m : List.of(
+                "items", "getItems",
+                "children", "getChildren",
+                "patientList", "getPatientList",
+                "responses", "getResponses",
+                "data", "getData"
+        )) {
+            Object v = tryInvoke(resp, m);
+            if (v instanceof List) return (List<?>) v;
+        }
+
+        // 2) 이름 몰라도 OK: "인자 없고 List 반환" public 메서드 탐색
+        Method candidate = Arrays.stream(resp.getClass().getMethods())
+                .filter(m -> m.getParameterCount() == 0)
+                .filter(m -> List.class.isAssignableFrom(m.getReturnType()))
+                .findFirst()
+                .orElse(null);
+
+        if (candidate == null) {
+            String methods = Arrays.stream(resp.getClass().getMethods())
+                    .filter(m -> m.getDeclaringClass() != Object.class)
+                    .map(m -> m.getName() + " : " + m.getReturnType().getSimpleName())
+                    .distinct()
+                    .sorted()
+                    .reduce("", (a, b) -> a + "\n- " + b);
+
+            fail("PatientSearchResponse에서 List 반환 메서드를 못 찾았어. 발견된 메서드:" + methods);
+        }
+
+        try {
+            Object v = candidate.invoke(resp);
+            if (v instanceof List) return (List<?>) v;
+            fail("List 반환 메서드로 보였는데 실제 반환이 List가 아니야: " + candidate.getName());
+            return List.of();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static int extractTotal(Object resp) {
+        // 1) 흔한 이름 후보 먼저 시도
+        for (String m : List.of(
+                "total", "getTotal",
+                "count", "getCount",
+                "totalCount", "getTotalCount"
+        )) {
+            Object v = tryInvoke(resp, m);
+            Integer parsed = toInt(v);
+            if (parsed != null) return parsed;
+        }
+
+        // 2) 이름 몰라도 OK: "인자 없고 숫자 반환" public 메서드 탐색
+        Method candidate = Arrays.stream(resp.getClass().getMethods())
+                .filter(m -> m.getParameterCount() == 0)
+                .filter(m -> {
+                    Class<?> rt = m.getReturnType();
+                    return rt == int.class || rt == Integer.class || rt == long.class || rt == Long.class;
+                })
+                .findFirst()
+                .orElse(null);
+
+        if (candidate == null) {
+            String methods = Arrays.stream(resp.getClass().getMethods())
+                    .filter(m -> m.getDeclaringClass() != Object.class)
+                    .map(m -> m.getName() + " : " + m.getReturnType().getSimpleName())
+                    .distinct()
+                    .sorted()
+                    .reduce("", (a, b) -> a + "\n- " + b);
+
+            fail("PatientSearchResponse에서 total/count 반환 메서드를 못 찾았어. 발견된 메서드:" + methods);
+        }
+
+        try {
+            Object v = candidate.invoke(resp);
+            Integer parsed = toInt(v);
+            if (parsed != null) return parsed;
+            fail("total 반환 메서드로 보였는데 int로 변환이 안돼: " + candidate.getName());
+            return 0;
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static Integer toInt(Object v) {
+        if (v instanceof Integer i) return i;
+        if (v instanceof Long l) return Math.toIntExact(l);
+        if (v instanceof Short s) return (int) s;
+        return null;
+    }
+
+    private static Object tryInvoke(Object target, String methodName) {
+        try {
+            Method m = target.getClass().getMethod(methodName);
+            return m.invoke(target);
+        } catch (Exception ignored) {
+            return null;
+        }
     }
 }
